--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -48,5 +48,5 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4"
   },
-  "proxy": "https://portfolio-6may.onrender.com"
+  "proxy": "http://localhost:5000/"
 }
