--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "portfolio-install":"npm install --prefix portfolio-app",
     "server":"nodemon server.js",
     "portfolio":"npm start --prefix portfolio-app",
-    "dev":"concurrently \"npm run server\" \"npm run portfolio-app\"",
+    "dev":"concurrently \"npm start\" \"npm run portfolio-app\"",
     "start":"node server.js",
     "heroku-postbuild":"NPM_CONFIG_PRODUCTION=false npm install --prefix portfolio-app && npm run build --prefix portfolio-app"
   },
