--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.19.3",
     "axios": "^1.7.2",
+    "express": "^4.19.2",
     "i": "^0.3.7",
     "npm": "^10.8.2",
     "react": "^18.3.1",
