--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "server": "nodemon server.js",
     "portfolio": "npm start --prefix portfolio-app",
     "dev": "concurrently \"npm run server\" \"npm run portfolio\"",
-    "start": "node server.js",
-    "build": "npm run portfolio-install && npm run build --prefix portfolio-app"
+    "start": "node server.js"
+    
   },
   "author": "",
   "license": "ISC",
