--- a/portfolio-app/package.json
+++ b/portfolio-app/package.json
@@ -12,6 +12,7 @@
     "express": "^4.19.2",
     "i": "^0.3.7",
     "npm": "^10.8.2",
+    "portfolio": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
