--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,17 @@
-{
+{   
+    "version":2,
+    "name":"portfolio-app",
     "builds": [
       {
-        "src": "portfolio-app/package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "build"
-        }
+        "src": "app.js",
+        "use": "@vercel/node"
+        
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/portfolio-app/build/index.html"
+        "dest": "/app.js"
       }
     ]
   }
