--- a/vercel.json
+++ b/vercel.json
@@ -11,7 +11,15 @@
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "/app.js"
+        "dest": "/"
+      },
+         {
+        "src": "/admin",
+        "dest": "/"
+      },
+         {
+        "src": "/admin-login",
+        "dest": "/"
       }
     ]
   }
